# cplease

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test-ubuntu-latest-clang-with_std_expected.yml  test-ubuntu-latest-clang.yml  test-ubuntu-latest.yml  ubuntu-latest.yml  windows-latest-with-std-expected.yml
include/plz/: future.hpp  futures.hpp  packaged_task.hpp  packaged_task_base.hpp  task.hpp  task_base.hpp  thread_pool.hpp
include/plz/circbuff/: channel.hpp  concepts.hpp  reader.hpp  writer.hpp
include/plz/expected/: future.hpp  futures.hpp  packaged_task.hpp  task.hpp
include/plz/help/: array_traits.hpp  callable.hpp  math.hpp  type_traits.hpp
test/: CMakeLists.txt  async_expected_tasks.test.cpp  async_tasks.test.cpp  channel.test.cpp  circbuff.test.cpp  expected_future.test.cpp  future.test.cpp  main.test.cpp  type_traits.test.cpp
